tenant_default and doc